tiny spacing issue under the title

--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ h1 {
 h1.JFTR {
     font-size: 40px;
     letter-spacing: 4px;
-    margin-bottom:0px;
+    margin-bottom: -2px;
     text-align: left;
 }
 h2 {
